--- a/src/corelib/js/resources/css/de-intrabuild-groupware-email-EmailView.css
+++ b/src/corelib/js/resources/css/de-intrabuild-groupware-email-EmailView.css
@@ -37,11 +37,20 @@
 }
 
 .de-intrabuild-groupware-email-EmailView-dataInset {
-    padding-left:62px;background-image:url(../images/email-preview-header-icon.png);background-repeat:no-repeat;background-position:top left;
+    padding-left:62px;
+    min-height:60px;
+    background-image:url(../images/email-preview-header-icon.png);
+    background-repeat:no-repeat;
+    background-position:top left;
 }
 
 .de-intrabuild-groupware-email-EmailView-date {
-    position:relative;float:right;font-size:11px;font-weight:bold;color:#15428B;font-family:Tahoma, Verdana, Helvetica, Arial;
+    position:relative;
+    float:right;
+    font-size:11px;
+    font-weight:bold;
+    color:#15428B;
+    font-family:Tahoma, Verdana, Helvetica, Arial;
 }
 
 .de-intrabuild-groupware-email-EmailView-subject {
